# rust-swissdata

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/fso/: commune.rs
src/: lib.rs  serde.rs  tools.rs
src/fso/: asset.rs  communes.de.bib  communes.de.ris  communes.en.bib  communes.en.ris  communes.fr.bib  communes.fr.ris  communes.it.bib  communes.it.ris  communes.rs  mod.rs
src/tools/: dataset.rs  downloader.rs  editor.rs  message.rs  meta.rs  mod.rs
src/tools/internal/: serde.rs
